<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--    <item-->
<!--        android:id="@+id/menu_my_cart"-->
<!--        android:title="MyCart"-->
<!--        android:icon="@drawable/menu_shopping"-->
<!--        app:showAsAction="always"/>-->
    <group android:id="@+id/sideNavGroupMain" android:checkableBehavior="single">
        <item
            android:id="@+id/sideNavHomes"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/side_nav_home"
            android:checked="true"/>

        <item
            android:id="@+id/sideNavCart"
            android:icon="@drawable/menu_shopping"
            android:title="@string/side_nav_wishlist"
            android:visible="true"/>
        <item
            android:id="@+id/sideNavProfile"
            android:icon="@drawable/baseline_person_4_24"
            android:title="@string/side_nav_profile"
            android:visible="true" />
        <item
            android:id="@+id/sideNavOrderList"
            android:icon="@drawable/baseline_order_list_24"
            android:title="@string/side_nav_order_list"
            android:visible="true" />
        <item
            android:id="@+id/sideNavList"
            android:icon="@drawable/baseline_message_24"
            android:title="@string/side_nav_msg"
            android:visible="true" />
        <item
            android:id="@+id/sideNavSetting"
            android:icon="@drawable/baseline_setting_24"
            android:title="@string/side_nav_setting"
            android:visible="false"/>
    </group>
    <group android:id="@+id/sideNavGroupAuth">
        <item
            android:id="@+id/sideNavLogin"
            android:icon="@drawable/baseline_login_24"
            android:title="@string/side_nav_login" />
        <item
            android:id="@+id/sideNavLogout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/side_nav_logout"
            android:visible="false" />
    </group>
</menu>